# TODO: This file is not up to date and will need to be updated

[metadata]
name = kubefox-sdk
description = The Kubefox Kit SDK for Python
author = XigXog
author_email = bryan.fauble@xigxog.io
license = MPL 2.0
license_files = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://xigxog.io/
project_urls =
    Source = https://github.com/xigxog/kubefox
    Tracker = https://github.com/xigxog/kubefox/issues
    Documentation = https://github.com/xigxog/kubefox
    Changelog = https://github.com/xigxog/kubefox

platforms = any
classifiers =
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.12

[options]
python_requires = >=3.8

install_requires =
    protobuf~=4.25.3
    opentelemetry-proto~=1.25.0
    dataclasses-json~=0.6.7
    grpcio~=1.64.1
; tests_require =

[options.extras_require]
dev =
    black
    isort
    pre-commit

; tests =

[options.package_data]
kit =
    kit
